--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -201,14 +201,26 @@
     );
     z-index: 1;
   }
+
+/* -------- Crystal Cardenas Modifications --------- */
+  .hero_desk {
+    display: none;
+  }
+  .hero_mob {
+    display: block;
+  }
 }
 
-.hero_desk {
-  display: none;
+
+.feature_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  padding: 20px;
+  width: 100%;
+  gap: 20px;
 }
-.hero_mob {
-  display: block;
-}
+
+
 
 /* Tablet and Desktop */
 @media (min-width: 700px) {
@@ -222,7 +234,7 @@
     display: none;
   }
 }
-
+/* --------------------------------------------- */
 @media (prefers-color-scheme: dark) {
   .vercelLogo {
     filter: invert(1);
