--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,17 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn&display=swap');
+
 .header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 1rem;
-    background-color: #333;
-  }
-
-  .left {
-    display: flex;
-    align-items: center;
-  }
-
-  .right {
-    display: flex;
-    align-items: center;
-  }
+    background-color: #F1F0ED;
+}
+  
+.left, .right {
+  display: flex;
+  align-items: center;
+  font-family: 'Vollkorn', serif; 
+  text-transform: uppercase; 
+}
