--- a/styles/SellerProfile.module.css
+++ b/styles/SellerProfile.module.css
@@ -13,6 +13,9 @@
     flex-direction: column;
     background-color: #F1F0ED;
     align-items: center;
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
 }
 .container h2 {
     text-align: left;
@@ -20,9 +23,10 @@
 }
 
 .presentation {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    /* grid-template-columns: 1fr 1fr; */
+    width: 100%;
     gap: 20px;
     align-items: center;
     padding: 30px;
@@ -30,4 +34,16 @@
 .about {
     background-color: #E0DCD3;
     padding: 30px;
+}
+
+@media only screen and (min-width: 780px) {
+    .presentation {
+        flex-direction: row;
+    }
+    .imgContainer {
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+        justify-self: right;
+    }
 }
